tests/errors/bug_functions2.pa

program gcd2(output);
var x: integer;
	y : real;
	a, b, c : BOOLEAN;

function integer : integer;
	begin
	end;

function asdasd : integer;
	begin
	end;

begin
 A := integer(1, 2, 3, a, b, c) - PARAMCOunt;
 x := 2 * f and (-(- y) < 2);
 a := not b aNd c;
 A := b MoD a and c	;
 y := 3 mod (3 mod (5 * 0.0));
end.

